<resources>
    <string name="app_name">Tapply</string>
    <string name="title_biztok">BizTok</string>
    <string name="title_more">More</string>
    <string name="title_profile">Profile</string>
    <string name="title_messege">Message</string>
    <string name="title_event">Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>