<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_play_circle_24"
        android:title="@string/title_biztok" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/date"
        android:title="@string/title_event" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_messege"
        android:icon="@drawable/send"
        android:title="@string/title_messege" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ellipsis"
        android:title="@string/title_more" />

</menu>