<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tapple.BizTok"
        android:label="@string/title_biztok"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.tapple.ui.event.Event"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tapple.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_messege"
        android:name="com.example.tapple.ui.notifications.NotificationsFragment"
        android:label="@string/title_messege"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.tapple.ui.More"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>